# text-fx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: generate_mapping.py
specs/: PLAN.md
src/text_fx/: __init__.py  api.py  cli.py  compositor.py  config.py  exceptions.py  resolver.py
src/text_fx/catalog/: __init__.py  loader.py  mapping.py
src/text_fx/data/: __init__.py  effect_mapping.json  effects_catalog.json
src/text_fx/easing/: __init__.py  curves.py
src/text_fx/engines/: __init__.py  base.py
src/text_fx/engines/alpha/: __init__.py  cascade.py  fade.py  typewriter.py
src/text_fx/engines/distortion/: __init__.py  displacement.py  motion_blur.py  particle.py  radial_warp.py  sine_warp.py
src/text_fx/engines/glitch/: __init__.py  decode.py  rgb_shift.py  (+2 more)
src/text_fx/schema/: __init__.py  generator.py  parser.py
src/text_fx/typography/: __init__.py  fonts.py  layout.py  renderer.py
tests/: conftest.py  test_alpha_cascade.py  test_alpha_fade.py  test_alpha_typewriter.py  test_basic_editing_fade_in.py  test_catalog_loads.py  test_catalog_unique_slugs.py  test_category_basic_editing.py  test_category_distortion_warp.py  test_category_glitch_digital.py  test_category_kinetic_typography.py  test_category_light_neon.py  test_category_mask_reveal.py  test_cli_apply.py  test_cli_categories.py  test_cli_info.py  test_cli_list.py  test_cli_render_overlay.py  test_distortion_displacement.py  test_distortion_motion_blur.py  test_distortion_particle.py  test_distortion_radial_warp.py  test_distortion_sine_warp.py  test_distortion_warp_wave_distortion.py  test_effect_mapping_complete.py  test_font_loading_explicit_path.py  test_font_loading_system_default.py  test_glitch_decode.py  test_glitch_digital_rgb_split_text.py  test_glitch_rgb_shift.py  test_glitch_scanline.py  test_glitch_slice_corrupt.py  test_kinetic_bounce.py  test_kinetic_oscillate.py  test_kinetic_slide.py  test_kinetic_spin.py  test_kinetic_spring.py  test_kinetic_typography_kinetic_pop.py  test_light_neon_neon_glow_text.py  test_mask_linear_wipe.py  (+16 more)
(+16 files in other folders)
